--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <main class="container">
         <div class=" todo-app_card">
       <header class="container__header">
-        <div>
-          <h1>Good Evening, Manupa 👋</h1>
-          <p>Today, Sat 1st October 2024</p>
+        <div >
+          <h1 class="todo-app__greeting"></h1>
+          <p class="todo-app__date"></p>
         </div>
         <div class="container__header__time">
-          <h1>9:05 PM</h1>
+          <h1 class="todo-app__time">9:05 PM</h1>
         </div>
       </header>
       <div class="todo__create__container">
