Update submit button and Update Delete button functionalities

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <p class="todo-app__date"></p>
         </div>
         <div class="container__header__time">
-          <h1 class="todo-app__time">9:05 PM</h1>
+          <h1 class="todo-app__time"></h1>
         </div>
       </header>
       <div class="todo__create__container">
@@ -27,7 +27,6 @@
         <button class="todo__create__button">Add</button>
       </div>
       <div class="todo__container"></div>
-    </div>
     </main>
     <script src="script.js"></script>
   </body>
